update findHelpful quest

--- a/scripts/dialogs/junkville/helpful-copain-disappeared.json
+++ b/scripts/dialogs/junkville/helpful-copain-disappeared.json
@@ -8,7 +8,7 @@
         "ask-story": {
             "availableHook": "",
             "hook": "",
-            "state": "",
+            "state": "story",
             "text": "ask-story"
         },
         "build-slint": {
